Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98813

Webengine failed with macOS 12 x86_64: Undefined symbols for architecture x86_64

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 5.15
    • WebEngine
    • None
    • macOS
    • 7ff159da12 (qt/qtwebengine-chromium/87-based)

      http://ci-files01-hki.intra.qt.io:8080/coin/integration/qt/tqtc-qt5/tasks/web_qt_tqtc-qt5_1638276549329

      http://ci-files01-hki.intra.qt.io:8080/coin/api/results/qt/qtwebengine/e9b8d444a716f9c1e33cd5bcbb9337d9489fb660/MacOSMacOS_12x86_64MacOSMacOS_12x86_64Clangqtci-macos-12-x86_64-102-1c7afb/caac04bc688ef64b2db969fd46f5e2ecb63b48ba/build_1638277257/log.txt.gz

       

      FAILED: transport_security_state_generator transport_security_state_generator.dSYM/Contents/Info.plist transport_security_state_generator.dSYM/Contents/Resources/DWARF/transport_security_state_generator 
      agent:2021/12/01 03:14:10 build.go:394: TOOL_VERSION=1635424013 ../../3rdparty/chromium/build/toolchain/mac/linker_driver.py -Wcrl,strippath,/Applications/Xcode13.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/strip ../../../../../../../../Applications/Xcode13.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -B /Applications/Xcode13.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ -Wcrl,dsym,. -Wcrl,dsymutilpath,../../../../../../../../Applications/Xcode13.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/dsymutil -Wl,-fatal_warnings -stdlib=libc++ -arch x86_64 -Wl,-no_data_in_code_info -Wl,-no_function_starts -isysroot ../../../../../../../../Applications/Xcode13.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.0.sdk -mmacosx-version-min=10.13 -Wl,-ObjC -Wcrl,strip,-x,-S -o "./transport_security_state_generator" -Wl,-filelist,"./transport_security_state_generator.rsp" -framework ApplicationServices -framework AppKit -framework CoreFoundation -framework IOKit -framework OpenDirectory -framework Security -framework Foundation -lbsm -lpmenergy -lpmsample
      agent:2021/12/01 03:14:10 build.go:394: Undefined symbols for architecture x86_64:
      agent:2021/12/01 03:14:10 build.go:394: "std::__1::basic_string<unsigned short, base::string16_internals::string16_char_traits, std::__1::allocator<unsigned short> >::shrink_to_fit()", referenced from:
      agent:2021/12/01 03:14:10 build.go:394: base::UTF8ToUTF16(char const*, unsigned long, std::__1::basic_string<unsigned short, base::string16_internals::string16_char_traits, std::__1::allocator<unsigned short> >*) in libbase.a(base_jumbo_20.o)
      agent:2021/12/01 03:14:10 build.go:394: base::WideToUTF16(wchar_t const*, unsigned long, std::__1::basic_string<unsigned short, base::string16_internals::string16_char_traits, std::__1::allocator<unsigned short> >*) in libbase.a(base_jumbo_20.o)
      agent:2021/12/01 03:14:10 build.go:394: ld: symbol(s) not found for architecture x86_64
      agent:2021/12/01 03:14:10 build.go:394: clang: error: linker command failed with exit code 1 (use -v to see invocation)
      agent:2021/12/01 03:14:10 build.go:394: Traceback (most recent call last):
      agent:2021/12/01 03:14:10 build.go:394: File "../../3rdparty/chromium/build/toolchain/mac/linker_driver.py", line 307, in <module>
      agent:2021/12/01 03:14:10 build.go:394: Main(sys.argv)
      agent:2021/12/01 03:14:10 build.go:394: File "../../3rdparty/chromium/build/toolchain/mac/linker_driver.py", line 97, in Main
      agent:2021/12/01 03:14:10 build.go:394: subprocess.check_call(compiler_driver_args, env=env)
      agent:2021/12/01 03:14:10 build.go:394: File "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 190, in check_call
      agent:2021/12/01 03:14:10 build.go:394: raise CalledProcessError(retcode, cmd)
      agent:2021/12/01 03:14:10 build.go:394: subprocess.CalledProcessError: Command '['../../../../../../../../Applications/Xcode13.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++', '-B', '/Applications/Xcode13.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/', '-Wl,-fatal_warnings', '-stdlib=libc++', '-arch', 'x86_64', '-Wl,-no_data_in_code_info', '-Wl,-no_function_starts', '-isysroot', '../../../../../../../../Applications/Xcode13.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.0.sdk', '-mmacosx-version-min=10.13', '-Wl,-ObjC', '-o', './transport_security_state_generator', '-Wl,-filelist,./transport_security_state_generator.rsp', '-framework', 'ApplicationServices', '-framework', 'AppKit', '-framework', 'CoreFoundation', '-framework', 'IOKit', '-framework', 'OpenDirectory', '-framework', 'Security', '-framework', 'Foundation', '-lbsm', '-lpmenergy', '-lpmsample']' returned non-zero exit status 1

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            hehalmet Heikki Halmet
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes