Try to fix build on Apple Monterey

std::basic_string<T>::shrink_to_fit appears to not be inline

Change-Id: I5bca251bdde433e917879947f97659973c430f54
Fixes: QTBUG-98813
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>